# jazz-graph

./: .gitignore  LICENSE  README.md  project_notes.md  project_spec.md  pyproject.toml  requirements.txt  write_up.md
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.sample
documents/: capstone_meeting_notes.txt  poster.md  write_up.md
documents/jazz-concept-with-cartoon-characters-musicians-stage-with-instruments-note-silhouettes/: 26770.eps
documents/jazz-musician-playing-saxophone/: 6e02a2ea-3b6d-4be9-9994-37a424dbc4cd.eps
documents/latex/: test_poster.tex
documents/poster/: test_poster.tex
notebooks/: classifier.ipynb  explore.ipynb  link_prediction.ipynb  modeling.ipynb  present.ipynb  recommendation.ipynb  same_album_links.ipynb  sandbox.ipynb
queries/: 001_dedup_rec_album.sql  002_add_first_releases.sql  003_add_jazz_recordings_view.sql  004_compositions_as_mat_view.sql  005_rebuild_jazz_recordings.sql  006_rebuild_jazz_recordings.sql  compositions.sql  find_stuff_in_mbz.sql  link_artist_recording_explore.sql  performance_to_album.sql  recording_to_album.sql  recording_to_performer.sql  schema.md  scratch.sql  test_queries.cypher  update_kind_of_blue_tracks  update_kind_of_blue_tracks.cypher
resources/: GNN_Resources.md
scripts/: apply_migrations.py  create_jazz_table.py  create_parquet_tables.py  create_subgenres.py  experiments.py  extract_discog.py  extract_discogs_jazz.py  recommendation.py
scripts/training/: unsupervised.py  (+1 more)
tests/: conftest.py  test_data_normalization.py  test_extract_discogs.py  test_releases.jsonl
(+56 files in other folders)
